# ff4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: Makefile  benchmarking.h  buchberger.cpp  groebner_basis.cpp  main.cpp
benchmarks/buchberger/: Makefile  main.cpp
benchmarks/internal/: groebner_basis.cpp  main.cpp
benchmarks/sum/: Makefile  main.cpp
benchmarks/test_sum/: Makefile  main.cpp
generators/: cyclic.py  katsura.py  output.txt
lib/algo/: buchberger.cpp  buchberger.h  buchberger_with_criteria.h  buchberger_with_criterias.cpp  buchberger_with_criterias.h  buchberger_with_criterias_version2.cpp  buchberger_with_criterias_version2.h  f4.cpp  f4.h  improved_buchberger.h
lib/algo/test/: main.cpp
lib/algo/util/: groebner_basis_util.cpp  groebner_basis_util.h  matrix_reduction.cpp  matrix_reduction.h  thread_pool.h
lib/util/: comp.h  comp.hpp  critical_pair.h  critical_pair.hpp  math.cpp  math.h  matrix.h  monomial.cpp  monomial.h  monomial.hpp  polynomial.cpp  polynomial.h  polynomial.hpp  prime_field.h  prime_field.hpp  rational.cpp  rational.h  term.cpp  term.h
tests/: Makefile  buchberger.cpp  f4.cpp  main.cpp  monomial.cpp  polynomial.cpp  prime_field.cpp  rational.cpp  term.cpp  testing.h
tests/buchberger/: Makefile  main.cpp
tests/monomial/: Makefile  main.cpp
tests/polynomial/: Makefile  main.cpp
tests/rational/: Makefile  main.cpp
tests/term/: Makefile  main.cpp
